integrate imdb testdata from PostBOUND

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,10 @@ build/
 patches/*.bak
 
 *.log
+*.lock
+
+# hints stuff
+pg_lab/hints/*
+
+#ues testdata stuff
+pg_lab/ues/SQLTestData/imdb_data/*
